--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -140,6 +140,7 @@
             <ImageView
                 android:id="@+id/iv_background"
                 android:layout_width="0dp"
+                android:scaleType="fitXY"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
