--- a/app/src/main/res/drawable/drawable_rectangle_bottom_detail.xml
+++ b/app/src/main/res/drawable/drawable_rectangle_bottom_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/background_bottom_write" />
+    <solid android:color="@color/primary_app" />
     <corners
         android:topLeftRadius="30dp"
         android:topRightRadius="30dp" />
