--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,10 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:alpha="0.0"
-        app:cardCornerRadius="30dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true">
 
@@ -88,24 +89,21 @@
                 app:layout_constraintTop_toTopOf="@id/iv_time"
                 tools:text="11:00" />
 
-            <ScrollView
+            <TextView
+                android:id="@+id/tv_letter"
+                style="@style/WithTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:lineSpacingExtra="10dp"
+                android:maxHeight="400dp"
+                android:minHeight="100dp"
+                android:padding="20dp"
+                android:scrollbars="vertical"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_divider">
-
-                <TextView
-                    android:id="@+id/tv_letter"
-                    style="@style/WithTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineSpacingExtra="10dp"
-                    android:padding="20dp"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-            </ScrollView>
+                app:layout_constraintTop_toBottomOf="@id/view_divider" />
 
         </android.support.constraint.ConstraintLayout>
 
