--- a/app/src/main/res/layout/fragment_decimal.xml
+++ b/app/src/main/res/layout/fragment_decimal.xml
@@ -23,6 +23,7 @@
         android:id="@+id/rv_decimal"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
