--- a/app/src/main/res/layout/item_statistic_total.xml
+++ b/app/src/main/res/layout/item_statistic_total.xml
@@ -14,16 +14,27 @@
         android:layout_height="wrap_content"
         android:padding="20dp">
 
+        <ImageView
+            android:id="@+id/ic_icon"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/ic_total"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:fontFamily="@font/namsan"
             android:text="@string/text_total"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@id/ic_icon"
+            app:layout_constraintStart_toEndOf="@id/ic_icon"
+            app:layout_constraintTop_toTopOf="@id/ic_icon" />
 
         <TextView
             android:id="@+id/tv_comment_1"
@@ -33,9 +44,9 @@
             android:paddingBottom="4dp"
             android:text="@string/text_statistic_so_far"
             android:textColor="@android:color/darker_gray"
-            android:textSize="16sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/tv_total"
-            app:layout_constraintStart_toStartOf="@id/tv_title" />
+            app:layout_constraintStart_toStartOf="@id/ic_icon" />
 
         <TextView
             android:id="@+id/tv_total"
@@ -45,7 +56,7 @@
             android:fontFamily="@font/namsan"
             android:includeFontPadding="false"
             android:textColor="@color/text_statistic_total"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/tv_comment_1"
             app:layout_constraintTop_toBottomOf="@id/tv_title"
@@ -53,15 +64,18 @@
 
         <TextView
             android:id="@+id/tv_comment_2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:ellipsize="end"
             android:fontFamily="@font/namsan"
+            android:maxLines="1"
             android:paddingBottom="4dp"
             android:text="@string/text_statistic_written"
             android:textColor="@android:color/darker_gray"
-            android:textSize="16sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/tv_total"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_total" />
 
     </android.support.constraint.ConstraintLayout>
