--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -38,10 +38,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_diary" />
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/ll_not_found_diary"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone"
@@ -50,23 +50,48 @@
         app:layout_constraintStart_toStartOf="@id/rv_main_diary"
         app:layout_constraintTop_toTopOf="@id/rv_main_diary"
         app:layout_constraintVertical_bias="0.4"
-        tools:ignore="UseCompoundDrawables">
+        tools:ignore="UseCompoundDrawables"
+        tools:visibility="visible">
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_not_found"
+            android:id="@+id/iv_no_data_bg"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:alpha="0.3"
+            android:background="@drawable/drawable_circle_no_data"
+            app:layout_constraintBottom_toTopOf="@id/tv_no_data"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/iv_no_data"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_no_data"
+            app:layout_constraintBottom_toBottomOf="@id/iv_no_data_bg"
+            app:layout_constraintEnd_toEndOf="@id/iv_no_data_bg"
+            app:layout_constraintStart_toStartOf="@id/iv_no_data_bg"
+            app:layout_constraintTop_toTopOf="@id/iv_no_data_bg"
             tools:ignore="ContentDescription" />
 
         <TextView
+            android:id="@+id/tv_no_data"
             style="@style/WithTextView"
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/text_not_found_diary"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_no_data_bg" />
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
     <TextView
         android:id="@+id/tv_recently_plan"
@@ -100,7 +125,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_recently_plan" />
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/ll_not_found_plan"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -111,22 +136,47 @@
         app:layout_constraintEnd_toEndOf="@id/rv_main_plan"
         app:layout_constraintStart_toStartOf="@id/rv_main_plan"
         app:layout_constraintTop_toTopOf="@id/rv_main_plan"
-        tools:ignore="UseCompoundDrawables">
+        tools:ignore="UseCompoundDrawables"
+        tools:visibility="visible">
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_not_found"
+            android:id="@+id/iv_no_data_bg2"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:alpha="0.3"
+            android:background="@drawable/drawable_circle_no_data"
+            app:layout_constraintBottom_toTopOf="@id/tv_no_data2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/iv_no_data2"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_no_data"
+            app:layout_constraintBottom_toBottomOf="@id/iv_no_data_bg2"
+            app:layout_constraintEnd_toEndOf="@id/iv_no_data_bg2"
+            app:layout_constraintStart_toStartOf="@id/iv_no_data_bg2"
+            app:layout_constraintTop_toTopOf="@id/iv_no_data_bg2"
             tools:ignore="ContentDescription" />
 
         <TextView
+            android:id="@+id/tv_no_data2"
             style="@style/WithTextView"
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/text_not_found_plan"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_no_data_bg2" />
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
