--- a/app/src/main/res/layout/fragment_decimal.xml
+++ b/app/src/main/res/layout/fragment_decimal.xml
@@ -75,6 +75,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/text_register_decimal_day"
+            android:textColor="@color/day_background2"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
