--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -84,6 +84,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/text_not_found_diary"
+            android:textColor="@color/day_background2"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -170,6 +171,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/text_not_found_plan"
+            android:textColor="@color/day_background2"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
