--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -95,6 +95,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/text_not_found_diary"
+                android:textColor="@color/day_background2"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
