--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -117,7 +117,8 @@
         app:layout_constraintBottom_toBottomOf="@id/tv_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_time"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_content"
@@ -140,8 +141,8 @@
             <ImageView
                 android:id="@+id/iv_background"
                 android:layout_width="0dp"
-                android:scaleType="fitXY"
                 android:layout_height="wrap_content"
+                android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
